Fix collapses for features

--- a/display/shared/styling/themes/base-theme.less
+++ b/display/shared/styling/themes/base-theme.less
@@ -134,6 +134,10 @@ prose-mirror {
 
     .item {
       .item-image {
+        .clickable {
+          cursor: pointer
+        }
+
         img {
           border: 1px solid var(--system-color-5);
         }
